<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:behavior_hideable="true"
    android:background="@drawable/bg_dialog"
    android:id="@+id/bottom_sheet"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <View
        android:id="@+id/tip"
        android:background="@drawable/btn_style"
        android:layout_width="40dp"
        android:layout_height="6dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:textSize="15sp"
        android:textStyle="bold"
        android:gravity="center"
        android:id="@+id/what_do"
        android:text="@string/what_would_like_to_do"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        android:layout_marginTop="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tip"/>

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/set_wallpaper_bottom"

        android:background="?android:attr/selectableItemBackground"
        android:padding="12dp"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/what_do">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/wallpapers_new"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_wall"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/set_lockscreen"
        android:background="?android:attr/selectableItemBackground"
        android:padding="12dp"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_wallpaper_bottom">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/lock"

            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lockscreen_text"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/set_both"
        android:background="?android:attr/selectableItemBackground"
        android:padding="12dp"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_lockscreen">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/both_lock_wall"
            android:layout_marginStart="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/both_text"
            android:textColor="@color/black"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="25dp"/>
    </LinearLayout>

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="12dp"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/set_both">

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>