<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    tools:context=".activity.EraseBgActivity">

    <FrameLayout
        android:id="@+id/banner_ad_erasebg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/banner_ad_dummy" />

    <RelativeLayout
        android:id="@+id/rl_top_erasebg"
        android:layout_width="fill_parent"
        android:layout_height="?actionBarSize"
        android:background="#292929">

        <TextView
            android:id="@+id/btn_back_erase"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_margin="10.0dip"
            android:background="@drawable/cat_back_icon_2"
            android:backgroundTint="@color/white"
            android:gravity="center"
            android:padding="5.0dip"
            android:textColor="@color/black"
            android:textSize="16.0dip" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/background_remover"
            android:textColor="@color/white"
            android:textSize="16.0dip" />


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_top_erasebg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="450dp"
                android:layout_margin="10dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/erbg_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                    </ImageView>
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/save_ebg_image"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="3"
                    app:cardCornerRadius="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ic_gradient_save_photo_back">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center_horizontal"
                            android:text="@string/save_photo"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold">

                        </TextView>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/edit_ebg_image"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_weight="2"
                    app:cardCornerRadius="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ic_gradient_addbackground_back">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center_horizontal"
                            android:text="@string/add_background"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold">

                        </TextView>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_edit_erase_bg"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="3"
                    app:cardCornerRadius="10dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ic_erase_bg">

                        <ImageView
                            android:id="@+id/eraser_img"
                            android:layout_width="fill_parent"
                            android:layout_height="30.0dip"
                            android:gravity="center"
                            android:padding="5dp"
                            android:src="@drawable/eraser_new"
                            android:visibility="gone"
                            app:tint="@color/black" />

                        <TextView
                            android:id="@+id/er_bgtext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            android:text="Erase"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold">

                        </TextView>
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>


</RelativeLayout>